2011-10-25 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSFIFO.h:
	* GSFIFO.m:
	Add new method to create a named FIFO and configure it from the
	defaults system.
	* GNUmakefile: bump version to 0.3.2

2011-08-29 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.m: Try to fool clang/llvm to avoid useless warning/error.

2011-08-24 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSFIFO.h:
	* GSFIFO.m:
	Use NSCondition to support multiple producer/consumer on FIFO.
	
2011-06-11 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSFIFO.h:
	* GSFIFO.m:
	Add the ability to monitor statistics on how long the FIFO blocks
	on put and get operations.
	Add methods to get/put multiple items.
	Add method to get stats for all FIFOs.

2011-06-06 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.h:
	* GSCache.m:
	Add a new method to let the delegate know when a cache hit has
	occurred on an item which is nearning the end of its lifetime ...
	providing an opportunity for the delegate to refresh the cache
	before the actual expiry.
	Also fix minor memory leak.

2011-06-05 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSFIFO.h:
	* GSFIFO.m:
	Use condition locks so that, if we have locking for both addition
	and removal, we can signal threads waiting at the other end.

2011-06-03 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSTicker.m: Thread safety fixes ... make date storage volatile and
	ensure that only one thread gets to set the base timestamp.

2011-06-02 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSFIFO.h:
	* GSFIFO.m:
	Make FIFO items be void* rather than id since we never send them
	any messages anyway.

2011-05-19 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: Add FIFO
	* Performance.h: Add FIFO
	* GSFIFO.h: Add a FIFO class
	* GSFIFO.m: Add a FIFO class

2011-03-08 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: Bump version number for next release.

2010-11-11 Riccardo Mottola

	* GSCache.m
	use always class_getInstanceSize() on GNUSTEP for all runtimes